fix(build): resolve ANTLR g4 file discovery and Spotless formatting conflicts